--- a/libs/sistema/theme/tokens/_typography.tokens.scss
+++ b/libs/sistema/theme/tokens/_typography.tokens.scss
@@ -22,7 +22,7 @@ $font-weight-body-m: $font-weight-regular;
 $font-weight-title-xxs: $font-weight-semi-bold;
 $font-weight-title-xs: $font-weight-semi-bold;
 $font-weight-title-s: $font-weight-semi-bold;
-$font-weight-title-m: $font-weight-thin;
+$font-weight-title-m: $font-weight-semi-bold;
 $font-weight-title-l: $font-weight-bold;
 $font-weight-display-s: $font-weight-bold;
 
