--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -14,23 +14,23 @@
   [formGroup]="form"
   qa="fields-form"
   (ngSubmit)="validate()">
-  <div
-    *ngIf="type === 'sources'"
-    class="selected-source">
-    <img
-      [src]="selectedConnector.logo"
-      [alt]="selectedConnector.title + ' logo'" />
-    <div>{{ selectedConnector.title }}</div>
-  </div>
-  <div
-    formGroupName="quickAccess"
-    class="settings">
-    <div class="field">
-      <pa-input formControlName="name">
-        {{ 'upload.source.quick_access_name' | translate }}
-      </pa-input>
+  <ng-container *ngIf="type === 'sources'">
+    <div class="selected-source">
+      <img
+        [src]="selectedConnector.logo"
+        [alt]="selectedConnector.title + ' logo'" />
+      <div>{{ selectedConnector.title }}</div>
     </div>
-  </div>
+    <div
+      formGroupName="quickAccess"
+      class="settings">
+      <div class="field">
+        <pa-input formControlName="name">
+          {{ 'upload.source.quick_access_name' | translate }}
+        </pa-input>
+      </div>
+    </div>
+  </ng-container>
   <div
     *ngFor="let field of fields"
     formGroupName="fields"
@@ -90,7 +90,9 @@
     </a>
   </div>
 
-  <div class="settings">
+  <div
+    class="settings"
+    *ngIf="type === 'sources'">
     <div class="field">
       <pa-checkbox formControlName="permanentSync">
         {{ 'upload.source.permanent-sync' | translate }}
