Replace MatDialog by Pastanaga modals in account module

--- a/apps/dashboard/src/app/account/account-kbs/account-kbs.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/account-kbs.component.html
@@ -1,7 +1,7 @@
 <div
   class="loading-shade"
   *ngIf="isLoading">
-  <mat-spinner></mat-spinner>
+  <nsi-spinner></nsi-spinner>
 </div>
 <div
   *ngIf="zones && account && knowledgeBoxes"
