--- a/apps/dashboard/src/app/account/account-manage/account-delete/account-delete.component.html
+++ b/apps/dashboard/src/app/account/account-manage/account-delete/account-delete.component.html
@@ -1,6 +1,6 @@
 <pa-modal-dialog>
   <pa-modal-title>
-    <h1>{{ 'account.delete_account_confirm_title' | translate }}</h1>
+    {{ 'account.delete_account_confirm_title' | translate }}
   </pa-modal-title>
   <pa-modal-content>
     <div>
