--- a/apps/manager/src/app/dealer/dealer-list/dealer-list.component.html
+++ b/apps/manager/src/app/dealer/dealer-list/dealer-list.component.html
@@ -23,7 +23,7 @@
   <div
     class="example-loading-shade"
     *ngIf="isLoadingResults || isRateLimitReached">
-    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    <nsi-spinner *ngIf="isLoadingResults"></nsi-spinner>
     <div
       class="example-rate-limit-reached"
       *ngIf="isRateLimitReached">
