--- a/apps/manager/src/app/users/users-list/users-list.component.html
+++ b/apps/manager/src/app/users/users-list/users-list.component.html
@@ -23,7 +23,7 @@
   <div
     class="example-loading-shade"
     *ngIf="isLoadingResults">
-    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    <nsi-spinner *ngIf="isLoadingResults"></nsi-spinner>
   </div>
   <table
     mat-table
