--- a/libs/common/src/lib/entities/entity-dialog/entity-dialog.component.html
+++ b/libs/common/src/lib/entities/entity-dialog/entity-dialog.component.html
@@ -1,33 +1,46 @@
-<div class="entity-dialog">
-  <pa-button
-    class="close-button"
-    icon="cross"
-    aspect="basic"
-    (click)="close()">
-    {{ 'generic.close' | translate }}
-  </pa-button>
-
-  <div class="mb-44">
-    <app-group-select
-      [(selected)]="group"
-      [groups]="(groups$ | async) || {}"
-      [disabled]="mode !== 'add'"></app-group-select>
-  </div>
-
-  <ng-container *ngIf="mode === 'view'">
-    <h2 class="mb-44">{{ data.entity?.value }}</h2>
-    <div class="entity-dialog-short-description mb-40">Capital d’Argentina</div>
-    <div class="entity-dialog-description">
-      Buenos Aires es la gran capital cosmopolita de Argentina. Su centro es la Plaza de Mayo, rodeada de imponentes
-      edificios del siglo XIX, incluida la Casa Rosada, el icónico palacio presidencial que tiene varios balcones. Entre
-      otras atracciones importantes, se incluyen el Teatro Colón, un lujoso teatro de ópera de 1908 con cerca de 2,500
-      asientos, y el moderno museo MALBA, que exhibe arte latinoamericano.
+<pa-modal-advanced>
+  <pa-modal-content>
+    <div class="mb-44">
+      <app-group-select
+        [(selected)]="group"
+        [groups]="(groups$ | async) || {}"
+        [disabled]="mode !== 'add'"></app-group-select>
     </div>
-    <div
-      fxLayout="row"
-      fxLayoutAlign="center center"
-      fxLayoutGap="12px"
-      class="mt-80">
+
+    <ng-container *ngIf="mode === 'view'">
+      <h2 class="mb-44">{{ modal.config.data?.entity?.value }}</h2>
+      <div class="entity-dialog-short-description mb-40">Capital d’Argentina</div>
+      <div class="entity-dialog-description">
+        Buenos Aires es la gran capital cosmopolita de Argentina. Su centro es la Plaza de Mayo, rodeada de imponentes
+        edificios del siglo XIX, incluida la Casa Rosada, el icónico palacio presidencial que tiene varios balcones.
+        Entre otras atracciones importantes, se incluyen el Teatro Colón, un lujoso teatro de ópera de 1908 con cerca de
+        2,500 asientos, y el moderno museo MALBA, que exhibe arte latinoamericano.
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="mode === 'edit' || mode === 'add'">
+      <h2
+        class="mb-16"
+        *ngIf="modal.config.data?.entity">
+        {{ modal.config.data?.entity.value }}
+      </h2>
+      <form
+        [formGroup]="entityForm"
+        (submit)="save()">
+        <div
+          class="mb-8"
+          *ngIf="!modal.config.data?.entity">
+          <pa-input
+            formControlName="name"
+            [errorMessages]="validationMessages.name">
+            {{ 'entity.entity_name' | translate }}
+          </pa-input>
+        </div>
+      </form>
+    </ng-container>
+  </pa-modal-content>
+  <pa-modal-footer>
+    <ng-container *ngIf="mode === 'view'">
       <pa-button
         aspect="basic"
         (click)="close()">
@@ -39,33 +52,9 @@
         (click)="edit()">
         {{ 'generic.edit' | translate }}
       </pa-button>
-    </div>
-  </ng-container>
+    </ng-container>
 
-  <ng-container *ngIf="mode === 'edit' || mode === 'add'">
-    <h2
-      class="mb-16"
-      *ngIf="data.entity">
-      {{ data.entity.value }}
-    </h2>
-    <form
-      [formGroup]="entityForm"
-      (submit)="save()">
-      <div
-        class="mb-8"
-        *ngIf="!data.entity">
-        <pa-input
-          formControlName="name"
-          [errorMessages]="validationMessages.name">
-          {{ 'entity.entity_name' | translate }}
-        </pa-input>
-      </div>
-    </form>
-    <div
-      fxLayout="row"
-      fxLayoutAlign="center center"
-      fxLayoutGap="16px"
-      class="mt-32">
+    <ng-container *ngIf="mode === 'edit' || mode === 'add'">
       <pa-button
         aspect="basic"
         (click)="close()">
@@ -76,6 +65,6 @@
         (click)="save()">
         {{ 'generic.save' | translate }}
       </pa-button>
-    </div>
-  </ng-container>
-</div>
+    </ng-container>
+  </pa-modal-footer>
+</pa-modal-advanced>
