--- a/libs/common/src/lib/token-dialog/token-dialog.component.scss
+++ b/libs/common/src/lib/token-dialog/token-dialog.component.scss
@@ -1,24 +1,22 @@
 @import 'apps/dashboard/src/variables';
 
-.token-dialog {
-  position: relative;
-  padding: 12px 35px;
+.title-with-button {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
 
-  h1 {
-    margin: 0 0 16px 0;
-    font-size: var(--stf-font-size-title);
-    font-weight: var(--stf-font-weight-bold);
-  }
+.token-container {
+  align-items: center;
+  display: flex;
+  gap: rhythm(2);
+}
 
-  &-value {
-    display: flex;
-    align-items: center;
-    height: 40px;
-    padding: 0 16px;
-    background-color: var(--stf-gray-background);
-    border-radius: 4px;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
+.token-dialog-value {
+  align-items: center;
+  background-color: $color-neutral-lightest;
+  border-radius: rhythm(0.5);
+  display: flex;
+  height: rhythm(5);
+  user-select: none;
 }
