[sc-4867] Avoid repeated requests in user management

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.html
@@ -73,8 +73,8 @@
       cdk-cell
       *cdkCellDef="let user">
       <pa-select
-        (ngModelChange)="changeRole(user.id, $event)"
-        [ngModel]="user.role"
+        (valueChange)="changeRole(user.id, $event)"
+        [value]="user.role"
         [disabled]="
           (isAccountManager | async) === false || (user.role === 'SOWNER' && (hasSeveralOwners | async) === false)
         "
