Fix dropdown button chevron + fix token dialog initialisation

--- a/libs/common/src/lib/token-dialog/token-dialog.component.html
+++ b/libs/common/src/lib/token-dialog/token-dialog.component.html
@@ -11,7 +11,7 @@
     </div>
   </pa-modal-title>
   <pa-modal-content>
-    <div [innerHTML]="'account.token_description' | translate"></div>
+    <p [innerHTML]="'account.token_description' | translate"></p>
     <div class="token-container">
       <div class="token-dialog-value">{{ modal.config.data?.['token'] | slice: 1:30 }}…</div>
       <pa-button
