--- a/libs/sistema/src/lib/dropdown-button/dropdown-button.component.html
+++ b/libs/sistema/src/lib/dropdown-button/dropdown-button.component.html
@@ -9,5 +9,5 @@
   [iconAndText]="!!icon"
   sameWidth>
   <ng-content></ng-content>
-  <pa-icon [name]="open ? 'chevron-up' : 'chevron-down'"></pa-icon>
+  <pa-icon name="chevron-down"></pa-icon>
 </pa-button>
