Fix dashboard build

--- a/apps/dashboard/src/app/account/account-kbs/users-dialog/users-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/users-dialog/users-dialog.component.html
@@ -2,7 +2,7 @@
   <pa-modal-title>{{ 'account.stash.users' | translate }}</pa-modal-title>
   <pa-modal-content>
     <app-users-manage
-      [kb]="modal.config.data.kb"
+      [kb]="modal.config.data?.['kb']"
       [modal]="true"></app-users-manage>
   </pa-modal-content>
 </pa-modal-advanced>
